--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
+* {
+  margin: 0;
+  padding: 0;
+}
+
+:root {
+  font-size: 16px;
+  --main-red: red;
+  --light-gray: rgb(187, 187, 187);
+
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
