--- a/src/features/searchBar/SearchBar.module.css
+++ b/src/features/searchBar/SearchBar.module.css
@@ -4,7 +4,6 @@
   justify-content: space-evenly;
   align-items: center;
   height: 4rem;
-
   box-shadow: 5px 0 10px gray;
 }
 
@@ -57,6 +56,8 @@
 .searchBar:focus::placeholder {
   color: var(--light-gray);
 }
+
+/*Submit Button*/
 
 .submit {
   margin-left: 0.5rem;
