--- a/src/features/searchBar/SearchBar.module.css
+++ b/src/features/searchBar/SearchBar.module.css
@@ -1,10 +1,26 @@
 /*Main Header Section*/
-.header {
+.searchBarContainer {
+  position: fixed;
+  z-index: 2;
+  top:0;
+  left: 0;
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  width: 100vw;
   height: 4rem;
+  background-color: white;
   box-shadow: 5px 0 10px gray;
+}
+
+.hideSearchBar {
+  transform: translateY(-100%);
+  box-shadow: none !important; 
+  transition: transform .5s, box-shadow 1s;
+}
+
+.returnSearchBar {
+  transition: all 0.5s;
 }
 
 /*MINIReddit Logo*/
