--- a/src/features/searchBar/SearchBar.module.css
+++ b/src/features/searchBar/SearchBar.module.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Varela+Round&display=swap');
+
 /*Main Header Section*/
 .searchBarContainer {
   position: fixed;
@@ -29,12 +31,13 @@
   align-items: center;
   text-decoration: none;
   color: red;
-  /*font-family: ;*/
+  font-family: 'Varela Round', sans-serif;
   font-size: 1.5rem;
   font-weight: bold;
 }
 
 .logo span {
+  font-family: Arial, Helvetica, sans-serif;
   color: black;
   font-weight: bold;
   margin-left: 0.5rem;
